--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ pico_sdk_init()
 # Add your source files
 add_executable(${NAME}
     main.cpp # <-- Add source files here!
+    input.cpp 
+    output.cpp 
+    ui.cpp 
+    clock.cpp 
 )
 
 # Include required libraries
